--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,3 +1,3 @@
-PORT=4000
+PORT=5000
 
-DB_URI ="mongodb://localhost:27017/SnekaEcommerce"
+DB_URI ="mongodb+srv://sneka:eGzSgZ8N3bnuqbNg@cluster0.5evyr.mongodb.net/SnekaEcommerce?retryWrites=true&w=majority"
