--- a/backend/config/.env
+++ b/backend/config/.env
@@ -2,6 +2,6 @@ PORT=5000
 
 DB_URI ="mongodb+srv://sneka:eGzSgZ8N3bnuqbNg@cluster0.5evyr.mongodb.net/SnekaEcommerce?retryWrites=true&w=majority"
 
-JWT_SECRET=FMIOEJFKOSKFDHFYYFGFYUXWIJSPOSKDDHVUF809EDODLKM049589
+JWT_SECRET=HFIUSHFW98YWFU909F8ISDIFU9SDSJKDFHA89ECASFDIU
 
-JWT_EXPIRE=5d
+JWT_EXPIRE="5h"
