--- a/backend/config/.env
+++ b/backend/config/.env
@@ -5,3 +5,5 @@ DB_URI ="mongodb+srv://sneka:eGzSgZ8N3bnuqbNg@cluster0.5evyr.mongodb.net/SnekaEc
 JWT_SECRET=HFIUSHFW98YWFU909F8ISDIFU9SDSJKDFHA89ECASFDIU
 
 JWT_EXPIRE="5h"
+
+COOKIE_EXPIRE=5
