--- a/front-end/package.json
+++ b/front-end/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "axios": "^0.27.2",
     "overlay-navbar": "^1.2.3",
     "react": "^16.13.0",
@@ -11,6 +12,7 @@
     "react-dom": "^16.13.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
